added docker files

--- a/books-client/src/main/resources/application.properties
+++ b/books-client/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 spring.application.name=books-client
-soap.server.uri=http://localhost:8080/ws
+books-soap.url=http://localhost:8080
+soap.server.uri=${books-soap.url}/ws
 wsdl.context.path=dev.shvetsova.books.client.wsdl
 
